--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -12,11 +12,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
       - name: Run tests
-        run: |
-          pip install pytest
-          pytest
+        run: pytest
 
       - name: Build Docker image with commit SHA
         run: |
