--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -22,10 +22,20 @@ jobs:
       - name: Build Docker image with commit SHA
         run: |
           docker build \
-            -t portfolio-website:${{ github.sha }} \
-            -t portfolio-website:latest \
+            -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ github.sha }} \
+            -t ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest \
             .
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/portfolio-website:latest
 
       - name: Validate Python syntax
         run: python -m py_compile app.py
